<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:background="@color/background_color"
        android:padding="20dp"

        xmlns:android="http://schemas.android.com/apk/res/android">

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/close"
            android:padding="5dp"
            android:contentDescription="closebutton"
            android:layout_margin="4dp"
            android:layout_gravity="top|end"
            android:layout_alignParentRight="true"
            android:id="@+id/close_activity"/>

        <FrameLayout
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:id="@+id/frameContainer"
            android:layout_below="@+id/close_activity"/>
        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="@color/white_greyish"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/loginEmail"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="5px"
                android:background="@color/white_greyish" />

            <EditText
                android:id="@+id/loginpaswd"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="5px"
                android:background="@color/white_greyish" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="8dp" >

                <CheckBox
                    android:id="@+id/show_hide_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/show_pwd"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:padding="5dp"
                    android:text="@string/forgot"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>


            <Button
                android:id="@+id/btnLogIn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/loginbutton_selector"
                android:padding="3dp"
                android:text="@string/login"
                android:textColor="#009688"
                android:textSize="17sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/TVSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnLogIn"

                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/newUser"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
        </LinearLayout>



    </RelativeLayout>



